syntax = "proto3";
package quip.matchmaker;
option go_package="github.com/GambitLLC/quip/libs/pb/matchmaker";

import "google/protobuf/timestamp.proto";

message GameConfiguration {
  string gamemode = 1;
}

message QueueSearching {
  string gamemode = 1;
  google.protobuf.Timestamp start_time = 2;
}

message QueueStopped {
  optional string reason = 1;
}

message MatchFound {
  string match_id = 1;
  string connection = 2;
}

enum State {
  STATE_OFFLINE = 0;
  STATE_IDLE = 1;
  STATE_SEARCHING = 2;
  STATE_PLAYING = 3;
}

message Status {
  State state = 1;

  oneof details {
    QueueSearching searching = 2;

    QueueStopped stopped = 3;

    MatchFound matched = 4;
  }
}

// Indicates change in status.
message StatusUpdate {
  repeated string targets = 1;

  Status status = 2;
}